# FORE

./: Cargo.toml  README.md
docs/: Frame of Reference Encryption (FORE) System As Built Documentation.md
images/: detailed_fore_process.tiff
src/: lib.rs
src/core/: field.rs  mod.rs  system.rs  transform.rs
src/plugins/: mod.rs
tests/: .nist_suite.rs.kate-swp  security_tests.rs
